// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`makeDocQuery()  makes an elasticSearch agg object, and the proper with @types, terms, and field 1`] = `
Object {
  "query": Object {
    "bool": Object {
      "must": Array [
        Object {
          "term": Object {
            "_deprecated": false,
          },
        },
      ],
    },
  },
}
`;

exports[`makeDocQuery()  makes an elasticSearch aggs object even with filters provided! 1`] = `
Object {
  "query": Object {
    "bool": Object {
      "must": Array [
        Object {
          "term": Object {
            "_deprecated": false,
          },
        },
        Object {
          "match": Object {
            "_all_fields": "mySearchString",
          },
        },
        Object {
          "bool": Object {
            "must": Array [
              Object {
                "nested": Object {
                  "path": "sex",
                  "query": Object {
                    "bool": Object {
                      "should": Array [
                        Object {
                          "term": Object {
                            "sex.labels": "male",
                          },
                        },
                      ],
                    },
                  },
                },
              },
            ],
          },
        },
      ],
    },
  },
}
`;

exports[`makeDocQuery()  makes an elasticSearch aggs object even with nested filters 1`] = `
Object {
  "query": Object {
    "bool": Object {
      "must": Array [
        Object {
          "term": Object {
            "_deprecated": false,
          },
        },
        Object {
          "match": Object {
            "_all_fields": "mySearchString",
          },
        },
        Object {
          "bool": Object {
            "must": Array [
              Object {
                "nested": Object {
                  "path": "brainLocation",
                  "query": Object {
                    "nested": Object {
                      "path": "brainLocation.brainRegion",
                      "query": Object {
                        "bool": Object {
                          "should": Array [
                            Object {
                              "term": Object {
                                "brainLocation.brainRegion.labels": "Posterior complex of the thalamus",
                              },
                            },
                          ],
                        },
                      },
                    },
                  },
                },
              },
            ],
          },
        },
      ],
    },
  },
}
`;

exports[`makeDocQuery()  makes an elasticSearch aggs object with a bool must match term if a type argument is provided 1`] = `
Object {
  "query": Object {
    "bool": Object {
      "must": Array [
        Object {
          "term": Object {
            "_deprecated": false,
          },
        },
        Object {
          "match": Object {
            "_all_fields": "mySearchString",
          },
        },
      ],
    },
  },
}
`;

exports[`makeDocQuery()  makes an elasticSearch aggs object with a query if a textQuery argument is provided 1`] = `
Object {
  "query": Object {
    "bool": Object {
      "must": Array [
        Object {
          "term": Object {
            "_deprecated": false,
          },
        },
        Object {
          "match": Object {
            "_all_fields": "mySearchString",
          },
        },
      ],
    },
  },
}
`;
